@@ -127,60 +127,57 @@ setsid
 
 ################ ---- DRLM CRON FILE
 #
-#
+########
 
 DRLM_CRON_FILE="/etc/cron.d/drlm"
 
 ################ ---- DRLM STORAGE LOCATIONS
 #
-#
+########
 
 STORDIR=$VAR_DIR/store
 ARCHDIR=$VAR_DIR/arch
 
 ################ ---- DRLM DATA BACKEND TYPES
-
-########
 #
 # Defines the location of data files, database connection|schema|user|...
 #
-# DB_BACKEND=[file|sqlite3]
+# DB_BACKEND=[sqlite3]
 #	default: sqlite3
 #
 ########
 
 DB_BACKEND=sqlite3
 
+################ ---- DATABASE FILE PATH
 #
-# DB_BACKEND=file
-# DATABASE FILE PATHS
+# Define client database location (Only if DB_BACKEND=sqlite3)
 #
-# These are default values and can be overwrited in local.conf adjusting your installation and configuration.
-#
-# Client database location
-#
-#
-#CLIDB="$VAR_DIR/client.data"
-#BKPDB="$VAR_DIR/backup.data"
-#NETDB="$VAR_DIR/network.data"
-#
-
-#
-# DB_BACKEND=sqlite3
-# DATABASE FILE PATH
-#
-# This is the default value and can be overwrited in local.conf.
-#
-# Client database location
-#
+########
 
 DB_PATH="$VAR_DIR/drlm.sqlite"
 
 ################ ---- DRLM MAX. NUM. BACKUPS TO KEEP IN FILESYSTEM
 #
-#    Max numbers of backups to keep in filesystem
+#Max numbers of backups to keep in filesystem
 #
+########
+
 HISTBKPMAX=2
+
+################ ---- DRLM CLIENT BACKUPS PERSISTENCE
+#
+# Defines what to do with client backups when deleting it.
+#
+# BKP_CLI_PER=[0|1|2]
+#    0: do nothing
+#    1: delete from database
+#    2: delete from database and DR files
+#	default: 2
+#
+########
+
+BKP_CLI_PER=2
 
 ################ ---- DRLM REPORTING VARIABLES
 
@@ -258,7 +255,8 @@ MAIL_BCC=""
 
 ################ ---- DHCP CONFIGURATION
 #
-#
+########
+
 DHCP_DIR="/etc/dhcp"
 DHCP_FILE="$DHCP_DIR/dhcpd.conf"
 DHCP_FIX_CAP="$SHARE_DIR/conf/DHCP/dhcp_pxe_header_config.template"
@@ -267,7 +265,8 @@ DHCP_SVC_NAME="dhcpd"
 
 ################ ---- NFS CONFIGURATION
 #
-#
+########
+
 NFS_DIR="/etc"
 NFS_FILE="$NFS_DIR/exports"
 NFS_OPTS="rw,sync,no_root_squash,no_subtree_check"
@@ -275,24 +274,28 @@ NFS_SVC_NAME="nfs"
 
 ################ ---- HOSTS CONFIGURATION
 #
-#
+########
+
 HOSTS_FILE="/etc/hosts"
 
 ################ ---- HTTP CONFIGURATION
 #
-#
+########
+
 REAR_LOG_DIR="/var/log/drlm/rear"
 CLI_CONF_DIR="/etc/drlm/clients"
 REST_OPTS="--capath /etc/rear/cert"
 
 ################ ---- USER CONFIGURATION
 #
-#
+########
+
 DRLM_USER=drlm
 
 ############### ----- REAR DEB PACKAGE URL
 #
-#
+########
+
 #Maximum supported Version of ReaR for Debian6 is 1.18
 URL_REAR_DEBIAN6_32="http://download.opensuse.org/repositories/Archiving:/Backup:/Rear/Debian_7.0/i386/rear_1.18_i386.deb"
 URL_REAR_DEBIAN6_64="http://download.opensuse.org/repositories/Archiving:/Backup:/Rear/Debian_7.0/amd64/rear_1.18_amd64.deb"
@@ -312,7 +315,8 @@ URL_REAR_UBUNTU16_64="http://download.opensuse.org/repositories/Archiving:/Backu
 
 ############### ----- REAR DEPENDENCIES
 #
-#
+########
+
 REAR_DEP_REDHAT5="mkisofs mingetty syslinux nfs-utils portmap wget curl parted"
 REAR_DEP_REDHAT6="mkisofs mingetty syslinux nfs-utils cifs-utils rpcbind wget curl parted"
 REAR_DEP_REDHAT7="mkisofs mingetty syslinux nfs-utils cifs-utils rpcbind wget curl parted"
@@ -326,7 +330,8 @@ REAR_DEP_UBUNTU16="syslinux ethtool lsb-release xorriso iproute iputils-ping iso
 
 ############### ----- REAR SERVICES
 #
-#
+########
+
 REAR_SERVICES_REDHAT5="portmap nfs"
 REAR_SERVICES_REDHAT6="rpcbind nfs"
 REAR_SERVIVES_REDHAT7="rpcbind"
@@ -342,13 +347,16 @@ REAR_SERVICES_UBUNTU16="rpcbind"
 
 ############### ----- SUDO COMMANDS
 #
-#
+########
+
 SUDO_CMDS_DRLM="mount vgs stat"
 
 ############### ----- SSH PARAMETERS
 #
-#
+########
+
 SSH_OPTS="-ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no"
 
 ################ ---- custom scripts
 #
+########
